# ybls

./: .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  app.env.example  compose.env.example  docker-compose.yaml  json_dump.py  manage.py  pyproject.toml  pytest.ini  setup.cfg  ybls.nginx.conf
requirements/: base.txt
ybls/: urls.py  wsgi.py
ybls/core/: constants.py  models.py  urls.py  views.py
ybls/core/migrations/: 0001_initial.py
ybls/core/templates/core/: audio_widget.html  base.html  lesson_detail.html  levels_list.html  subject_detail.html  subjects_list.html  vimeo_widget.html  youtube_widget.html
ybls/core/templatetags/: material_widgets.py
ybls/settings/: base.py  dev.py  prod.py
